# not-again-ai

./: .editorconfig  .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  sitemap.xml
.github/: _typos.toml  copilot-instructions.md
.github/workflows/: .codeql.yml  codeql-analysis.yml  pages.yml  python.yml  typos.yml
docs/: index.md
notebooks/base/: base.ipynb
notebooks/llm/: 01_openai_chat_completion.ipynb  02_ollama_intro.ipynb  03_llm_streaming.ipynb  10_gpt-4-v.ipynb  20_embeddings.ipynb  common_chat_completion.ipynb  gpt-4-v.ipynb  ollama_intro.ipynb  openai_chat_completion.ipynb
notebooks/local_llm/: 01_common_chat_completion.ipynb  02_ollama_intro.ipynb  10_ollama_deepseek_coder_v2.ipynb  20_phi-3-vision.ipynb  common_chat_completion.ipynb  ollama_intro.ipynb  phi-3-vision.ipynb
notebooks/statistics/: statistics.ipynb
notebooks/viz/: viz.ipynb
readmes/: base.md  llm.md  statistics.md  viz.md
reference/: SUMMARY.html
reference/SUMMARY/: index.html
reference/not_again_ai/: __init__.html  parallel.html
reference/not_again_ai/__init__/: index.html
reference/not_again_ai/base/__init__/: index.html
reference/not_again_ai/base/file_system/: index.html
reference/not_again_ai/base/parallel/: index.html
reference/not_again_ai/data/__init__/: index.html
reference/not_again_ai/data/web/: index.html
reference/not_again_ai/llm/__init__/: index.html
reference/not_again_ai/llm/chat_completion/: index.html
reference/not_again_ai/llm/chat_completion/__init__/: index.html
reference/not_again_ai/llm/chat_completion/interface/: index.html
reference/not_again_ai/llm/chat_completion/types/: index.html
reference/not_again_ai/llm/context_management/: index.html
reference/not_again_ai/llm/embedding/__init__/: index.html
reference/not_again_ai/llm/embedding/interface/: index.html
reference/not_again_ai/llm/embedding/types/: index.html
reference/not_again_ai/llm/embeddings/: index.html
reference/not_again_ai/llm/gh_models/__init__/: index.html
reference/not_again_ai/llm/gh_models/azure_ai_client/: index.html
reference/not_again_ai/llm/openai_client/: index.html
reference/not_again_ai/llm/prompting/types/: index.html
reference/not_again_ai/llm/prompts/: index.html
reference/not_again_ai/llm/tokens/: index.html
reference/not_again_ai/local_llm/__init__/: index.html
reference/not_again_ai/local_llm/chat_completion/: index.html
reference/not_again_ai/local_llm/prompts/: index.html
reference/not_again_ai/local_llm/tokens/: index.html
reference/not_again_ai/statistics/__init__/: index.html
reference/not_again_ai/statistics/dependence/: index.html
reference/not_again_ai/system/: __init__.html  files.html
reference/not_again_ai/viz/: __init__.html  distributions.html  time_series.html  utils.html
reference/not_again_ai/viz/__init__/: index.html
reference/not_again_ai/viz/barplots/: index.html
reference/not_again_ai/viz/distributions/: index.html
reference/not_again_ai/viz/scatterplot/: index.html
reference/not_again_ai/viz/time_series/: index.html
reference/not_again_ai/viz/utils/: index.html
search/: search_index.json
src/not_again_ai/: parallel.py
src/not_again_ai/base/: file_system.py  parallel.py
src/not_again_ai/data/: __init__.py  brave_search_api.py  web.py
src/not_again_ai/data_analysis/: dependence.py
src/not_again_ai/llm/: __init__.py  chat_completion.py  chat_completion_vision.py  context_management.py  embeddings.py  oai_client.py  openai_client.py  prompts.py  tokens.py
src/not_again_ai/llm/chat_completion/: __init__.py  interface.py  types.py
src/not_again_ai/llm/embedding/: __init__.py  interface.py  types.py
src/not_again_ai/llm/gh_models/: azure_ai_client.py  chat_completion.py
src/not_again_ai/llm/image_gen/: __init__.py  interface.py  types.py
src/not_again_ai/llm/ollama/: chat_completion.py  client.py  ollama_client.py
src/not_again_ai/llm/openai/: context_management.py
src/not_again_ai/llm/openai_api/: chat_completion.py  context_management.py  openai_client.py  prompts.py  tokens.py
src/not_again_ai/llm/prompting/: __init__.py  compile_messages.py  compile_prompt.py  interface.py  types.py
src/not_again_ai/local_llm/: __init__.py  chat_completion.py  prompts.py  tokens.py
src/not_again_ai/local_llm/huggingface/: chat_completion.py  helpers.py
src/not_again_ai/local_llm/ollama/: chat_completion.py  model_mapping.py  service.py  tokens.py
src/not_again_ai/statistics/: __init__.py  dependence.py
src/not_again_ai/system/: files.py
src/not_again_ai/viz/: __init__.py  barplots.py  distributions.py  scatterplot.py  time_series.py  utils.py
tests/: test_not_again_ai.py  test_parallel.py
tests/base/: test_file_system.py  test_parallel.py
tests/data/: test_brave_search_api.py  test_web.py
tests/data_analysis/: depedence.py  test_depedence.py
tests/llm/: test_chat_completion.py  test_chat_completion_vision.py  test_context_management.py  test_embeddings.py  test_oai_client.py  test_openai_client.py  test_prompts.py  test_tokens.py
tests/llm/chat_completion/: test_chat_completion.py  test_chat_completion_stream.py
tests/llm/embedding/: test_embedding.py
tests/llm/gh_models/: chat_completion.py
tests/llm/image_gen/: test_image_gen.py
tests/llm/ollama/: test_chat_completion.py  test_client.py  test_service.py
tests/llm/open_ai/: test_azure_openai.py  test_chat_completion.py  test_context_management.py  test_embeddings.py  test_openai_client.py  test_prompts.py  test_tokens.py
tests/llm/openai/: test_chat_completion.py  test_context_management.py  test_embeddings.py  test_openai_client.py  test_prompts.py  test_tokens.py
tests/llm/prompting/: test_compile_messages.py  test_tokenizer.py
tests/local_llm/: test_chat_completion.py  test_prompts.py
tests/local_llm/ollama/: test_chat_completion.py  test_client.py  test_service.py  test_tokens.py
tests/statistics/: test_depedence.py  test_dependence.py
tests/viz/: test_barplot.py  test_distributions.py  test_scatterplot.py  test_time_series.py
(+36 files in other folders)
