[project]
name = "not-again-ai"
version = "0.21.0"
description = "Designed to once and for all collect all the little things that come up over and over again in AI projects and put them in one place."
authors = [
    { name = "DaveCoDev", email = "dave.co.dev@gmail.com" }
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/DaveCoDev/not-again-ai"
documentation = "https://github.com/DaveCoDev/not-again-ai"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7,<1.0",
    "pydantic>=2.11,<3.0",
]

[project.urls]
Homepage = "https://github.com/DaveCoDev/not-again-ai"
Documentation = "https://davecodev.github.io/not-again-ai/"
Repository = "https://github.com/DaveCoDev/not-again-ai"

[project.optional-dependencies]
data = [
    "Crawl4AI>=0.6,<1.0",
    "httpx>=0.28,<1.0",
    "markitdown[pdf]==0.1.2"
]
llm = [
    "anthropic>=0.55,<1.0",
    "azure-identity>=1.23,<2.0",
    "google-genai>1.22,<2.0",
    "ollama>=0.5,<1.0",
    "openai>=1.93,<2.0",
    "python-liquid>=2.0,<3.0",
    "tiktoken>=0.9,<1.0"
]
statistics = [
    "numpy>=2.3,<3.0",
    "scikit-learn>=1.7,<2.0",
    "scipy>=1.16"
]
viz = [
    "numpy>=2.3,<3.0",
    "pandas>=2.3,<3.0",
    "seaborn>=0.13,<1.0",
]

[dependency-groups]
dev = [
    "ipykernel",
    "ipywidgets",
]
nox = [
    "nox",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-randomly",
]
type_check = [
    "mypy",
    # Add "types-" stub packages as needed: https://github.com/python/typeshed/tree/main/stubs
]
lint = [
    "ruff",
]
typos = [
    "typos",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = "all"

[tool.mypy]
ignore_missing_imports = true
strict = true
# If certain strict config options are too pedantic for a project,
# disable them selectively here by setting to false.
disallow_untyped_calls = false

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "RUF", # ruff
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "PT", # flake-pytest-style
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
extend-ignore = ["E501"]
unfixable = ["F401"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
]
xfail_strict = true
filterwarnings = [
    # When running tests, treat warnings as errors (e.g. -Werror).
    # See: https://docs.pytest.org/en/latest/reference/reference.html#confval-filterwarnings
    "error",
    # Add additional warning suppressions as needed here. For example, if a third-party library
    # is throwing a deprecation warning that needs to be fixed upstream:
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
